Vlan Selection Work
Removed the Open Vlan identifier.  There is a default color that will be
used. Configuration needs to be updated.

--- a/Commander.NET/Commander.NET/Commander.NET.csproj
+++ b/Commander.NET/Commander.NET/Commander.NET.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="Vlan.cs" />
     <Compile Include="VlanFactory.cs" />
+    <Compile Include="VlanSelectedEventArgs.cs" />
     <Compile Include="VlanSelector.xaml.cs">
       <DependentUpon>VlanSelector.xaml</DependentUpon>
     </Compile>
