Make it Functional!
Ok this is a functional version. It doesn't save or do everything that I
want it to, but it is functional.

--- a/Commander.NET/Commander.NET/Commander.NET.csproj
+++ b/Commander.NET/Commander.NET/Commander.NET.csproj
@@ -61,6 +61,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Port.cs" />
+    <Compile Include="PortBuilder.cs" />
     <Compile Include="SwitchPort.xaml.cs">
       <DependentUpon>SwitchPort.xaml</DependentUpon>
     </Compile>
