--- a/Commander.NET/Commander.NET/Commander.NET.csproj
+++ b/Commander.NET/Commander.NET/Commander.NET.csproj
@@ -120,7 +120,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="ExampleConfig.xml" />
+    <Resource Include="ExampleConfig.xml">
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="JuniperConfig.xml" />
