Refactor Port Mappings
Now I am using a dictionary based port mapping. This way its faster to
lookup the port in the list.  Makes the code neater and keeps from doing
O(n^2) operations, now we are at O(n).

--- a/Commander.NET/Commander.NET/Commander.NET.csproj
+++ b/Commander.NET/Commander.NET/Commander.NET.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ConfigurationFactory.cs" />
     <Compile Include="Port.cs" />
     <Compile Include="PortFactory.cs" />
+    <Compile Include="PortMap.cs" />
     <Compile Include="SwitchPort.xaml.cs">
       <DependentUpon>SwitchPort.xaml</DependentUpon>
     </Compile>
